--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+.vscode/
+
+#datos
+etls/data/Crime_Data_from_2020_to_Present_20240914.csv
+*.zip
